Fixed an issue with current time slider being overlapped by event panels

--- a/SofthemeClassrooms/MVC/Content/TimeTable/scrollerAndSlider.css
+++ b/SofthemeClassrooms/MVC/Content/TimeTable/scrollerAndSlider.css
@@ -9,7 +9,7 @@
     border: none;
     background-color: transparent;
     border: none !important;
-    z-index: 101;
+    z-index: 102;
 }
 
     #custom-handle:active {
